crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__if-else-block-instead-of-dict-lookup_SIM116.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM116 Use a dictionary instead of consecutive `if` statements
  --> SIM116.py:6:5
   |
 5 |       # SIM116
 6 | /     if a == "foo":
 7 | |         return "bar"
 8 | |     elif a == "bar":
 9 | |         return "baz"
10 | |     elif a == "boo":
11 | |         return "ooh"
12 | |     else:
13 | |         return 42
   | |_________________^
14 |
15 |       # SIM116
   |

SIM116 Use a dictionary instead of consecutive `if` statements
  --> SIM116.py:16:5
   |
15 |       # SIM116
16 | /     if a == 1:
17 | |         return (1, 2, 3)
18 | |     elif a == 2:
19 | |         return (4, 5, 6)
20 | |     elif a == 3:
21 | |         return (7, 8, 9)
22 | |     else:
23 | |         return (10, 11, 12)
   | |___________________________^
24 |
25 |       # SIM116
   |

SIM116 Use a dictionary instead of consecutive `if` statements
  --> SIM116.py:26:5
   |
25 |       # SIM116
26 | /     if a == 1:
27 | |         return (1, 2, 3)
28 | |     elif a == 2:
29 | |         return (4, 5, 6)
30 | |     elif a == 3:
31 | |         return (7, 8, 9)
   | |________________________^
32 |
33 |       # SIM116
   |

SIM116 Use a dictionary instead of consecutive `if` statements
  --> SIM116.py:34:5
   |
33 |       # SIM116
34 | /     if a == "hello 'sir'":
35 | |         return (1, 2, 3)
36 | |     elif a == 'goodbye "mam"':
37 | |         return (4, 5, 6)
38 | |     elif a == """Fairwell 'mister'""":
39 | |         return (7, 8, 9)
40 | |     else:
41 | |         return (10, 11, 12)
   | |___________________________^
42 |
43 |       # SIM116
   |

SIM116 Use a dictionary instead of consecutive `if` statements
  --> SIM116.py:44:5
   |
43 |       # SIM116
44 | /     if a == b"one":
45 | |         return 1
46 | |     elif a == b"two":
47 | |         return 2
48 | |     elif a == b"three":
49 | |         return 3
   | |________________^
50 |
51 |       # SIM116
   |

SIM116 Use a dictionary instead of consecutive `if` statements
  --> SIM116.py:52:5
   |
51 |       # SIM116
52 | /     if a == "hello 'sir'":
53 | |         return ("hello'", 'hi"', 3)
54 | |     elif a == 'goodbye "mam"':
55 | |         return (4, 5, 6)
56 | |     elif a == """Fairwell 'mister'""":
57 | |         return (7, 8, 9)
58 | |     else:
59 | |         return (10, 11, 12)
   | |___________________________^
60 |
61 |       # OK
   |

SIM116 Use a dictionary instead of consecutive `if` statements
  --> SIM116.py:80:5
   |
79 |       # SIM116
80 | /     if func_name == "create":
81 | |         return "A"
82 | |     elif func_name == "modify":
83 | |         return "M"
84 | |     elif func_name == "remove":
85 | |         return "D"
86 | |     elif func_name == "move":
87 | |         return "MV"
   | |___________________^
88 |
89 |       # OK
   |
